<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#1F75AB">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" >
            </Space>
            <LinearLayout
                android:layout_width="110dp"
                android:layout_height="130dp"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/all"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/all"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/all"
                    android:textSize="20sp"
                    android:textColor="#fff"
                    android:textAlignment="center" />

            </LinearLayout>
            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" >
            </Space>
            <LinearLayout
                android:layout_width="110dp"
                android:layout_height="130dp"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/study"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/study"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/study"
                    android:textSize="20sp"
                    android:textColor="#fff"
                    android:textAlignment="center"/>

            </LinearLayout>
            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" >
            </Space>
            <LinearLayout
                android:layout_width="110dp"
                android:layout_height="130dp"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/photo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/picture"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pic"
                    android:textSize="20sp"
                    android:textColor="#fff"
                    android:textAlignment="center"/>

            </LinearLayout>
            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" >
            </Space>

        </LinearLayout>
        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" >
            </Space>
            <LinearLayout
                android:layout_width="110dp"
                android:layout_height="130dp"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/video"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/video"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/video"
                    android:textSize="20sp"
                    android:textColor="#fff"
                    android:textAlignment="center"/>

            </LinearLayout>
            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" >
            </Space>
            <LinearLayout
                android:layout_width="110dp"
                android:layout_height="130dp"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/special"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/special"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/special"
                    android:textSize="20sp"
                    android:textColor="#fff"
                    android:textAlignment="center"/>

            </LinearLayout>
            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" >
            </Space>
            <LinearLayout
                android:layout_width="110dp"
                android:layout_height="130dp"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/voice"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/voice"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/voice"
                    android:textSize="20sp"
                    android:textColor="#fff"
                    android:textAlignment="center"/>

            </LinearLayout>
            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" >
            </Space>

        </LinearLayout>
        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" >
            </Space>
            <LinearLayout
                android:layout_width="110dp"
                android:layout_height="130dp"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/font"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/font"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/font"
                    android:textSize="20sp"
                    android:textColor="#fff"
                    android:textAlignment="center"/>

            </LinearLayout>
            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" >
            </Space>
            <LinearLayout
                android:layout_width="110dp"
                android:layout_height="130dp"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/life"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/lifestyle"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/life"
                    android:textSize="20sp"
                    android:textColor="#fff"
                    android:textAlignment="center"/>

            </LinearLayout>
            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" >
            </Space>
            <LinearLayout
                android:layout_width="110dp"
                android:layout_height="130dp"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/other"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/others"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/other"
                    android:textSize="20sp"
                    android:textColor="#fff"
                    android:textAlignment="center"/>

            </LinearLayout>
            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" >
            </Space>

        </LinearLayout>
        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>